# eds-rs-react

./: .gitignore  README.md  TODO.md  eslint.config.js  index.html  package.json  vite.config.ts
data-generator/: Cargo.toml
data-generator/src/: main.rs
nginx/: default.conf
src/: App.tsx  queries.ts
src/components/: Hotel.tsx  Room.tsx  Typeahead.tsx
src/page/: HotelList.tsx  HotelPage.tsx  Landing.tsx  PageTemplate.tsx  RoomPage.tsx
