[package]
name = "data-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
csv = "1.3.1"
faker_rand = "0.1.1"
hashbrown = { version = "0.15.2", features = ["rayon"] }
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
uuid = { version = "1.12.0", features = ["v7", "serde"] }
